fix(resolution): initialize jackson, minimize reflection, use privileges (#22)
* fix: properly run jackson with privileged access

* test: remove it java security hack

* test: fail it tests that expect failure and don't recieve it

* fix(resolution): rethrow body parse errors as bad requests

* refactor: slightly better completable future parallel running

* fix: properly map all elasticsearch exception statuses