@@ -16,10 +16,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testcontainers.containers.output.Slf4jLogConsumer;
 import org.testcontainers.utility.DockerImageName;
-import org.testcontainers.utility.MountableFile;
 
 import java.io.IOException;
-import java.net.URL;
 import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Objects;
@@ -83,16 +81,6 @@ public abstract class AbstractITCase {
         PluggableElasticsearchContainer container = (PluggableElasticsearchContainer) new PluggableElasticsearchContainer(DEFAULT_IMAGE)
             .withPluginDir(Paths.get(PLUGIN_DIR))
             .withLogConsumer(new Slf4jLogConsumer(LOG));
-
-        // allow reflection for jackson
-        URL policyResourceUrl = AbstractITCase.class.getResource("java-security.policy");
-        String policyPath = policyResourceUrl.getPath();
-        container
-            .withEsJavaOpt("-Djava.security.manager -Djava.security.policy=/var/run/java/.java-policy")
-            .withCopyFileToContainer(
-                MountableFile.forHostPath(policyPath),
-                "/var/run/java/.java-policy"
-            );
 
         if (DEBUGGER_ENABLED) {
             LOG.info("Starting remote ES debugger on port {}", DEBUGGER_PORT);
